1998-10-11  Jim Kingdon

	* sanity.sh (rmadd): New test, tests for various existing
	behaviors with "cvs ci -r".

1998-10-09  Jim Kingdon

	* update.c (update_dirent_proc): For local CVS, if the directory
	does not exist in the working directory nor in the repository,
	just skip it.
	* sanity.sh (dirs): New tests dirs-3a, dirs-7 and dirs-8 test for
	this and related behaviors.  Note that the new behavior was also
	the previous behavior for remote; we are only changing it for local.

	* wrapper.c, cvsrc.c, ignore.c: Add comments about ignoring .cvsrc
	and friends if we can't find a home directory.
	* expand_path.c (expand_path): If we can't find the home
	directory, give an error rather than a coredump (or worse).
	* login.c (construct_cvspass_filename): Don't use errno in error
	message; get_homedir doesn't set it.  Add comment about this
	message.

1998-10-07  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff): Set variables to NULL at the start, and free
	memory at the end.
	* sanity.sh (multiroot2): Add tests for this (before the fix,
	multiroot2-12 would abort with "no more than two revisions/dates
	can be specified").

1998-10-06  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (installcheck check): Remove references to RCSBIN;
	they don't do anything now that RCSBIN is ignored.

	* client.c: Clean up horrible confusion about whether stored_mode
	or stored_mode_valid (or nothing :-)) indicates whether
	stored_mode is allocated.  Should fix crashes (for example, on NT
	when the server has renamed multiple files from uppercase to
	lowercase).

	* sanity.sh (dirs): New tests, tests for some cases involving
	admins who do surgery on the repository.

1998-10-03  Johannes Stezenbach <johannes.stezenbach@propack-data.de>

	* vers_ts.c (Version_TS): If UTIME_EXPECTS_WRITABLE, if
	necessary change the file to be writable temporarily to set its
	modification time.

1998-10-03  Jim Kingdon  <kingdon@harvey.cyclic.com>
